tests/ui/const-generics/gca/require-next-solver.stderr
error: `generic_const_args` requires -Znext-solver=globally to be enabled
  --> $DIR/require-next-solver.rs:2:12
   |
LL | #![feature(generic_const_args)]
   |            ^^^^^^^^^^^^^^^^^^
   |
   = help: enable all of these features

error: aborting due to 1 previous error

