tests/ui/const-generics/gca/require-next-solver.rs
#![feature(min_generic_const_args)]
#![feature(generic_const_args)]
//~^ ERROR next-solver
fn main() {}
